Breaking front page layouts out of the general layout and will do the same with other sections as well

--- a/themes/benamer/sass/style.scss
+++ b/themes/benamer/sass/style.scss
@@ -18,6 +18,7 @@
 // Import Layout
 ////////////////////////
 @import 'partials/layout/layout';
+@import 'partials/layout/frontpage';
 
 ////////////////////////
 // Import Design
