--- a/themes/benamer/sass/style.scss
+++ b/themes/benamer/sass/style.scss
@@ -19,6 +19,7 @@
 ////////////////////////
 @import 'partials/layout/layout';
 @import 'partials/layout/frontpage';
+@import 'partials/layout/article';
 
 ////////////////////////
 // Import Design
