--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2921,7 +2921,7 @@ body.front main section.aurora-frontpage-section.aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
 
-body.front main section.aurora-article-section.aurora-section-first {
+body.node-type-article section.aurora-article-section.aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
 
