Making front page pretty

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2798,6 +2798,8 @@ body.front main section.aurora-frontpage-section.aurora-section-first {
     height: 360px;
     clear: both;
     margin-top: inherit;
+    width: 100%;
+    float: left;
   }
 }
 
@@ -2936,6 +2938,10 @@ h2.article-title a {
 
 .field.field-name-title.field-type-ds.field-label-hidden {
   margin-bottom: -1.25em;
+}
+
+article.ds-1col.node.node-article.node-promoted.view-mode-front_page.clearfix {
+  cursor: pointer;
 }
 
 h1#site-title a {
