--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -32,6 +32,10 @@ h2.article-title a {
   margin-bottom: -1.25em;
 }
 
+article.ds-1col.node.node-article.node-promoted.view-mode-front_page.clearfix {
+  cursor: pointer;
+}
+
 h1#site-title a{
   // mobile first
   font-family: 'Lobster Two';
