--- a/themes/benamer/sass/partials/layout/_frontpage.scss
+++ b/themes/benamer/sass/partials/layout/_frontpage.scss
@@ -21,6 +21,8 @@ body.front main section.aurora-frontpage-section.aurora-section-first {
     height: 360px;
     clear: both;
     margin-top: inherit;
+    width: 100%;
+    float: left;
   }
 }
 
