--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2927,6 +2927,10 @@ body.node-type-article section.aurora-article-section.aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
 
+.panel-pane.pane-views-panes.pane-frontpage-panel-pane-1 {
+  margin-top: 1.15em;
+}
+
 div .pane-blockify-blockify-site-slogan {
   margin-top: 18px;
 }
@@ -3035,6 +3039,7 @@ ul.menu {
   list-style: none;
   text-align: left;
   list-style-type: none;
+  font-family: 'OpenSans';
 }
 
 ul li.first.leaf a:link, a:visited {
