--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -10,6 +10,7 @@
 // header backgrounds
 
 // frontpage
+
 body.front main section.aurora-frontpage-section.aurora-section-first {
   background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url("../img/benamercom-header.jpg");
 }
@@ -18,6 +19,9 @@ body.node-type-article section.aurora-article-section.aurora-section-first {
   background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url("../img/benamercom-header.jpg");
 }
 
+.panel-pane.pane-views-panes.pane-frontpage-panel-pane-1 {
+  margin-top: 1.15em;
+}
 
 div .pane-blockify-blockify-site-slogan {
   margin-top:18px;
@@ -117,6 +121,7 @@ ul.menu {
   list-style: none;
   text-align: left;
   list-style-type: none;
+  font-family: 'OpenSans';
 }
 
 ul li.first.leaf a:link, a:visited {
