--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -15,7 +15,7 @@ body.front main section.aurora-frontpage-section.aurora-section-first {
   background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url("../img/benamercom-header.jpg");
 }
 
-body.node-type-article section.aurora-article-section.aurora-section-first {
+div#article > section.aurora-article-section:first-child {
   background:linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0)), url("../img/benamercom-header.jpg");
 }
 
