Creating basic page styles

--- a/themes/benamer/sass/style.scss
+++ b/themes/benamer/sass/style.scss
@@ -20,6 +20,7 @@
 @import 'partials/layout/layout';
 @import 'partials/layout/frontpage';
 @import 'partials/layout/article';
+@import 'partials/layout/basicpage';
 
 ////////////////////////
 // Import Design
