--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2919,6 +2919,73 @@ body.page-node main section.aurora-article-section.aurora-section-third {
   display: none;
 }
 
+body.page-node aurora-article-layout:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div#basic-page > section.aurora-article-section:first-child {
+  height: 180px;
+  margin-top: -1.5em;
+  width: 100%;
+  clear: left;
+}
+@media (min-width: 600px) {
+  div#basic-page > section.aurora-article-section:first-child {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    height: 180px;
+    margin-top: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  div#basic-page > section.aurora-article-section:first-child {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    height: 360px;
+    margin-top: inherit;
+    float: left;
+    width: 100%;
+  }
+}
+
+body.page-node main section.aurora-article-section.aurora-section-second {
+  clear: left;
+}
+@media (min-width: 600px) {
+  body.page-node main section.aurora-article-section.aurora-section-second {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: left;
+  }
+}
+@media (min-width: 1024px) {
+  body.page-node main section.aurora-article-section.aurora-section-second {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    height: 360px;
+    clear: left;
+    margin-top: inherit;
+  }
+}
+
+body.page-node main section.aurora-article-section.aurora-section-third {
+  display: none;
+}
+
 body.front main section.aurora-frontpage-section.aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
