--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2976,9 +2976,11 @@ div#basic-page > section.aurora-article-section.aurora-section-second {
     float: right;
     margin-left: 0;
     margin-right: 1.04167%;
-    height: 360px;
-    clear: left;
+    clear: both;
     margin-top: inherit;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
