--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2950,7 +2950,7 @@ div#basic-page > section.aurora-page-section.aurora-section-first {
     margin-left: 0;
     margin-right: 1.04167%;
     height: 360px;
-    margin-top: inherit;
+    margin-top: -1.5em;
     float: left;
     width: 100%;
   }
