Setting up basic page article section

--- a/themes/benamer/sass/partials/layout/_basicpage.scss
+++ b/themes/benamer/sass/partials/layout/_basicpage.scss
@@ -44,6 +44,13 @@ div#basic-page > section.aurora-article-section.aurora-section-second {
   }
 
 }
+
+
+div#basic-page > section.aurora-page-section.aurora-section-second div.panel-pane.pane-node-content {
+  margin-top: 1em;
+  float: left;
+}
+
 div#basic-page > section.aurora-article-section.aurora-section-third {
   display:none;
 }
