Adding search page layout

--- a/themes/benamer/sass/style.scss
+++ b/themes/benamer/sass/style.scss
@@ -21,6 +21,7 @@
 @import 'partials/layout/frontpage';
 @import 'partials/layout/article';
 @import 'partials/layout/basicpage';
+@import 'partials/layout/searchpage';
 
 ////////////////////////
 // Import Design
