--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2993,6 +2993,80 @@ div#basic-page > section.aurora-page-section.aurora-section-third {
   display: none;
 }
 
+body.page-node aurora-page-layout:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div#search > section.aurora-page-section.aurora-section-first {
+  height: 180px;
+  margin-top: -1.5em;
+  width: 100%;
+  clear: left;
+}
+@media (min-width: 600px) {
+  div#search > section.aurora-page-section.aurora-section-first {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    height: 180px;
+    margin-top: inherit;
+  }
+}
+@media (min-width: 1024px) {
+  div#search > section.aurora-page-section.aurora-section-first {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    height: 360px;
+    margin-top: inherit;
+    float: left;
+    width: 100%;
+  }
+}
+
+div#search > section.aurora-page-section.aurora-section-second {
+  clear: left;
+}
+@media (min-width: 600px) {
+  div#search > section.aurora-page-section.aurora-section-second {
+    width: 95.83333%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
+    clear: none;
+    clear: left;
+  }
+}
+@media (min-width: 1024px) {
+  div#search > section.aurora-page-section.aurora-section-second {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
+    clear: both;
+    margin-top: inherit;
+    width: 100%;
+  }
+}
+
+div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pane-node-content {
+  margin-top: 1em;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div#search > section.aurora-page-section.aurora-section-third {
+  display: none;
+}
+
 body.front main section.aurora-frontpage-section.aurora-section-first {
   background: linear-gradient(rgba(0, 0, 0, 0.8), transparent), url("../img/benamercom-header.jpg");
 }
