--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -3063,6 +3063,12 @@ div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pa
   margin-right: auto;
 }
 
+div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pane-search-result {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 div#search > section.aurora-page-section.aurora-section-third {
   display: none;
 }
