--- a/themes/benamer/sass/partials/layout/_searchpage.scss
+++ b/themes/benamer/sass/partials/layout/_searchpage.scss
@@ -49,8 +49,11 @@ div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pa
   margin-right: auto;
 }
 
-div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pane-search-result {
 
+div#search > section.aurora-page-section.aurora-section-second div.panel-pane.pane-search-result {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div#search > section.aurora-page-section.aurora-section-third {
