--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -33,7 +33,7 @@
       clear: left;
     }
     @include breakpoint($desktop) {
-      @include grid-span(4, 1, $output-style: 'float');
+      @include grid-span(3, 1, $output-style: 'float');
       height: 360px;
       clear: left;
       margin-top: inherit;
@@ -44,12 +44,12 @@
     @include add-gutter-style('split');
     clear: left;
     @include breakpoint($tablet) {
-      @include grid-span(10, 3);
+      @include grid-span(4, 2);
       clear: left;
     }
     @include breakpoint($desktop) {
-      @include grid-span(8, 5, $output-style: 'float');
-      clear: left;
+      @include grid-span(8, 4, $output-style: 'float');
+      clear: none;
       margin-top: inherit;
     }
   }
