Adding whitespace in left column

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2940,6 +2940,18 @@ body.page-node main section.aurora-article-section.aurora-section-third {
   }
 }
 
+.addthis_toolbox.addthis_default_style.addthis_32x32_style {
+  margin-top: 2em;
+}
+
+.panel-pane.pane-token.pane-node-created {
+  margin-top: 1em;
+}
+
+.panel-pane.pane-block.pane-addthis-addthis-block {
+  margin-top: 1.75em;
+}
+
 body.page-node aurora-page-layout:after {
   content: "";
   display: table;
