--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -53,3 +53,14 @@
       margin-top: inherit;
     }
   }
+
+  .addthis_toolbox.addthis_default_style.addthis_32x32_style {
+    margin-top: 2em;
+  }
+  .panel-pane.pane-token.pane-node-created {
+    margin-top: 1em;
+  }
+
+  .panel-pane.pane-block.pane-addthis-addthis-block {
+    margin-top: 1.75em;
+  }
