Moving around tablet layout for article page

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2894,7 +2894,7 @@ body.page-node main section.aurora-article-section.aurora-section-second {
 }
 @media (min-width: 600px) {
   body.page-node main section.aurora-article-section.aurora-section-second {
-    width: 29.16667%;
+    width: 12.5%;
     clear: right;
     float: left;
     margin-left: 2.08333%;
@@ -2920,10 +2920,10 @@ body.page-node main section.aurora-article-section.aurora-section-third {
 }
 @media (min-width: 600px) {
   body.page-node main section.aurora-article-section.aurora-section-third {
-    width: 62.5%;
-    float: left;
-    margin-right: -100%;
-    margin-left: 18.75%;
+    width: 79.16667%;
+    float: right;
+    margin-left: 0;
+    margin-right: 2.08333%;
     clear: none;
     clear: left;
   }
