--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2894,10 +2894,10 @@ body.page-node main section.aurora-article-section.aurora-section-second {
 }
 @media (min-width: 600px) {
   body.page-node main section.aurora-article-section.aurora-section-second {
-    width: 12.5%;
+    width: 95.83333%;
     clear: right;
-    float: left;
-    margin-left: 2.08333%;
+    float: right;
+    margin-left: 0;
     margin-right: 2.08333%;
     clear: left;
   }
@@ -2920,7 +2920,7 @@ body.page-node main section.aurora-article-section.aurora-section-third {
 }
 @media (min-width: 600px) {
   body.page-node main section.aurora-article-section.aurora-section-third {
-    width: 79.16667%;
+    width: 95.83333%;
     float: right;
     margin-left: 0;
     margin-right: 2.08333%;
