--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -15,7 +15,7 @@ $desktop: 1024px;
 @include add-grid(6 at $tablet); // tablet portrait
 @include add-grid(12 at $desktop); // desktop
 
-@include add-gutter(.125);
+@include add-gutter(1/3);
 @include add-gutter(1/3 at $tablet);
 @include add-gutter(1/3 at $desktop);
 
