--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -31,6 +31,7 @@
     @include breakpoint($tablet) {
       @include grid-span(6, 1, $output-style: 'float');
       clear: left;
+      margin-left:1em;
     }
     @include breakpoint($desktop) {
       @include grid-span(3, 1, $output-style: 'float');
@@ -45,6 +46,8 @@
     clear: left;
     @include breakpoint($tablet) {
       @include grid-span(6, 1);
+      width: 90%;
+      margin-left: 1em;
       clear: left;
     }
     @include breakpoint($desktop) {
