--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -69,3 +69,9 @@
   .panel-pane.pane-block.pane-addthis-addthis-block {
     margin-top: 1.75em;
   }
+
+  h2.article-title {
+    font-family: 'Open Sans';
+    font-weight: 800;
+    font-size: 2.5em;
+  }
