Move a style over to design layout from article layout and made H2 a little less prominent

--- a/themes/benamer/sass/partials/design/_design.scss
+++ b/themes/benamer/sass/partials/design/_design.scss
@@ -148,7 +148,9 @@ ul li.last.leaf a:link, a:visited {
 }
 
 h2{
-  font-family: 'Open Sans'; font-weight: 800;
+  font-family: 'Open Sans';
+  font-weight: 800;
+  font-size:1.5em;
 }
 
 .panel-pane.pane-block.pane-block-2 a {
@@ -190,4 +192,10 @@ div.form-type-searchfield input[type="search"] {
 section.aurora-article-section .panel-pane.pane-node-content {
   width: 90%;
   margin: auto;
+}
+
+h2.article-title {
+  font-family: 'Open Sans';
+  font-weight: 800;
+  font-size: 2.5em;
 }
