--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2897,10 +2897,10 @@ body.page-node main section.aurora-article-section.aurora-section-second {
 @media (min-width: 600px) {
   body.page-node main section.aurora-article-section.aurora-section-second {
     width: 29.16667%;
-    clear: right;
     float: left;
+    margin-right: -100%;
     margin-left: 2.08333%;
-    margin-right: 2.08333%;
+    clear: none;
     clear: left;
     margin-left: 1em;
   }
