--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2858,14 +2858,14 @@ body.page-node aurora-article-layout:after {
   clear: both;
 }
 
-div#article > section.aurora-article-section:first-child {
+body.page-node main section.aurora-article-section.aurora-section-first {
   height: 180px;
   margin-top: -1.5em;
   width: 100%;
   clear: left;
 }
 @media (min-width: 600px) {
-  div#article > section.aurora-article-section:first-child {
+  body.page-node main section.aurora-article-section.aurora-section-first {
     width: 95.83333%;
     float: right;
     margin-left: 0;
@@ -2873,10 +2873,12 @@ div#article > section.aurora-article-section:first-child {
     clear: none;
     height: 180px;
     margin-top: inherit;
+    width: 100%;
+    clear: left;
   }
 }
 @media (min-width: 1024px) {
-  div#article > section.aurora-article-section:first-child {
+  body.page-node main section.aurora-article-section.aurora-section-first {
     width: 97.91667%;
     clear: right;
     float: right;
@@ -2912,7 +2914,6 @@ body.page-node main section.aurora-article-section.aurora-section-second {
     float: left;
     margin-left: 1.04167%;
     margin-right: 1.04167%;
-    height: 360px;
     clear: left;
     margin-top: inherit;
   }
