--- a/themes/benamer/sass/partials/layout/_article.scss
+++ b/themes/benamer/sass/partials/layout/_article.scss
@@ -5,7 +5,8 @@
     @include clearfix;
   }
 
-  div#article > section.aurora-article-section:first-child {
+  body.page-node main section.aurora-article-section.aurora-section-first {
+  // div#article > section.aurora-article-section:first-child {
     height: 180px;
     margin-top: -1.5em;
     width:100%;
@@ -14,6 +15,8 @@
       @include grid-span(6, 1);
       height: 180px;
       margin-top: inherit;
+      width:100%;
+      clear:left;
     }
 
     @include breakpoint($desktop) {
@@ -37,7 +40,6 @@
     }
     @include breakpoint($desktop) {
       @include grid-span(3, 1, $output-style: 'float');
-      height: 360px;
       clear: left;
       margin-top: inherit;
     }
